Upgrading example app to Expo SDK 22.